# communication-adaptive-marl

./: .gitignore  README.md  pyproject.toml
baselines/: README.md  merge_and_plot.py  merge_curves_and_plot.py  requirements.txt  run_maddpg_rllib.py  run_mappo_rllib.py  run_ppo_rllib.py  run_qmix_rllib.py  utils_results.py
baselines/slurm/: maddpg_array.slurm  mappo_array.slurm  ppo_array.slurm  qmix_array.slurm
docs/: Research_Plan.md  direction2_adaptive_marl.md  notes_practitioners_guide_multi_turn_agentic_rl.md
examples/project1_multirobot/: README.md  multiagent_env.py  multirobot_training.py  train_multirobot.sh
experiments/agentic_rl/: README.md  agentic_training.py  train_agentic_rl.sh
experiments/agentic_rl/results/eval/: compare_baselines.py
experiments/agentic_rl/results/templates/: ablation_template.csv  results_template.csv
scripts/: array_train.slurm  eval_comm.py  hyperparam_grid.yaml
src/marl/: __init__.py  config.py
src/marl/communication/: hierarchical.py
src/marl/envs/: __init__.py  registry.py
src/marl/policies/: __init__.py  policy.py
src/marl/training/: pipeline.py
src/marl/utils/: logging.py
tests/: test_pipeline.py
